# PathOpening

./: .gitignore  CMakeLists.txt  Image.cpp  Image.h  PO.cpp  PO.h  Pixel.cpp  Pixel.h  README.md  function.cpp  function.h  main.cpp  makefile  setup.py  test.py
Images/: 11125-1.pgm  Test.pgm  Test2.pgm  inv-11125-1.pgm
Results/: 11125-1-70.pgm  DNAG-closing-33-0.tif  DNAGI-opening-70-0.tif  DNAGI-opening-70-1.tif  DNAGI-opening-70-3.tif  DNAGI-out-70-0.tif  DNAGI-out-70-3.tif  Test-3.pgm  Test-opening-4-0.pgm  Test-opening-4-1.pgm  Test2-11.pgm  Test2-12.pgm  Test2-3.pgm  Test2-7.pgm  Test2-8.pgm  Test2-9.pgm  Test2-out-7-0.pgm  Test2-out-7-1.pgm  Test2-out-7-2.pgm  inv-11125-1-200.pgm  inv-11125-1-70.pgm
